# cortex

./: .gitignore  README.md  pyproject.toml
src/cortex/: agent.py  approval.py  cli.py  session.py  system_prompt.py
src/cortex/tools/: editor.py  shell.py
src/cortex/tools/editor/: __init__.py  api.py  diagnostics.py  filesystem.py  text.py
src/cortex/tools/editor/tests/: tests.py
