[project]
name = "cortex"
version = "0.0.1"
description = "Local-first CLI AI helper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ollama",
]

[project.scripts]
cortex = "cortex.cli:main"

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

